# Severstal-Steel-Defect-Detection

./: .gitignore  pyproject.toml
notebooks/: analysis.ipynb  inference_test.ipynb  pipeline.ipynb
src/: dataset.py  engine.py  inference.py  model.py  train.py  utils.py
