[project]
name = "severstal-steel-defect-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "jupyter>=1.1.1",
    "lab>=8.3",
    "opencv-python>=4.10.0.84",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "pretrainedmodels>=0.7.4",
    "albumentations>=1.4.24",
    "scikit-learn>=1.6.0",
]
